# Text-Embedding

./: README.md  config.yaml  dataset.py  embedding.py  main.py  preprocess.py  pyproject.toml  requirements.txt  visualize.py
models/: w2v.model
