[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text-embed"
version = "0.1.0"
description = "Word2Vec text embeddings for Vietnamese"
authors = [{name="Your Name"}]
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
